--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,7 @@
     }
   ],
   "require": {
-    "craftcms/cms": "^4.0.0"
-  },
-  "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.8",
-    "codacy/coverage": "dev-master"
+    "craftcms/cms": "^4.0.0|^5.0.0"
   },
   "autoload": {
     "psr-4": {
