--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+    pull_request:
+      branches:
+        - main
+      types:
+        - closed
 
 jobs:
   release:
