--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout
+        uses: actions/checkout@3
 
       - name: Setup Node.js
-        uses: actions/setup-node
+        uses: actions/setup-node@v3
         with:
           node-version: '21'
 
