--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@semantic-release/github": "^10.1.1",
     "@semantic-release/release-notes-generator": "^14.0.1",
     "commitizen": "^4.2.4",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "semantic-release": "^24.0.0"
   },
