--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+  "repository":{
+    "type": "git",
+    "url": "https://github.com/boscho87/serve-secret.git"
+  },
+  "scripts": {
+    "commit": "cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.0",
@@ -10,13 +22,5 @@
     "conventional-changelog-conventionalcommits": "^8.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "semantic-release": "^24.0.0"
-  },
-  "scripts": {
-    "commit": "cz"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
